# VisualNovela

./: CMakeLists.txt  main.cpp
Engine/: Draw.cpp  Engine.cpp  Engine.h  Input.cpp  Update.cpp
Engine/GUI/: Button.cpp  Button.h  Textbox.cpp  Textbox.h  dialogueWindow.cpp  dialogueWindow.h  levelBox.cpp  levelBox.h
Engine/Pages/: ABSpageClass.h  mainPage.cpp  mainPage.h  playPage.cpp  playPage.h
Engine/Pages/lvls/: lvl.h
characters/: character.cpp  character.h
